# fastapi-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 24c00a278842_create_user_table.py  36a10f5ce443_added_email_validtion.py  602bd90b69ec_add_address_to_user.py  74c595ccba7e_initial_migration.py  809174478697_marked_the_address_as_nullable.py  c4e710c8fc90_add_models.py
app/: __init__.py  crud.py  database.py  env.py  main.py  models.py  schemas.py
