[project]
name = "local-db-psql-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.101.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email,timezone]>=2.11.7",
    "sqlalchemy>=2.0.41",
]

[tool.uv.sources]
pydantic = { git = "https://github.com/pydantic/pydantic", rev = "main" }
